--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,9 @@ before_install:
  
 script:
   - docker run netflux npm run test -- --coverage
+
+deploy:
+    provider: script
+    script: bash deploy.sh
+    on:
+      branch: master
